k8s/restaurant-service/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-deployment
  namespace: restaurant-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant
  template:
    metadata:
      labels:
        app: restaurant
    spec:
      containers:
      - name: restaurant-service
        image: afafalbakri/restaurant-srv
        ports:
        - containerPort: 80
        volumeMounts:
        - name: restaurant-volume
          mountPath: /var/www/html/storage
      volumes:
      - name: restaurant-volume
        persistentVolumeClaim:
          claimName: restaurant-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
  namespace: restaurant-namespace
spec:
  selector:
    app: restaurant
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
  type: LoadBalancer
