k8s/restaurant-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-ingress
  namespace: restaurant-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: restaurant.service.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: restaurant-service
            port:
              number: 8000
